--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".View.Activity.MainActivity">
+    android:background="@color/backgroundColor3"
+    android:paddingBottom="0dp"
+    tools:context=".View.Activities.MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,20 +15,24 @@
         android:id="@+id/frameLayout"/>
 
     <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:backgroundTint="#E2E4F8"
-        android:id="@+id/bottomAppBar"
-        app:fabCradleMargin="10dp"
+        android:backgroundTint="@color/bottomNav"
         app:fabAlignmentMode="end"
-        app:fabCradleRoundedCornerRadius="50dp">
+        app:fabCradleMargin="5dp"
+        android:padding="0dp"
+        android:layout_marginBottom="0dp"
+        app:fabCradleRoundedCornerRadius="20dp">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
+            android:paddingBottom="0dp"
+            android:layout_marginBottom="0dp"
             android:background="@android:color/transparent"
             app:itemIconSize="35dp"
             app:labelVisibilityMode="unlabeled"
