--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -66,6 +66,7 @@
                     android:layout_height="wrap_content"
                     android:focusable="false"
                     android:hint="Select time"
+                    android:textColorHint="@color/black"
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,6 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusable="false"
+                    android:textColorHint="@color/black"
                     android:hint="Category"
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -99,6 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Amount"
+                    android:textColorHint="@color/black"
                     android:inputType="number"
                     android:textColor="@color/black" />
 
@@ -117,6 +120,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Notes"
+                    android:textColorHint="@color/black"
+                    android:singleLine="true"
                     android:maxLines="1"
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
