--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/backgroundColor3"
+
     tools:context=".View.Activity.Fragment.HomeFragment">
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/materialToolbar"
@@ -70,17 +71,18 @@
     <LinearLayout
         android:id="@+id/pieChart"
         android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="250dp"
         android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateCard">
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            />
 
     </LinearLayout>
 
@@ -91,6 +93,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
+        android:background="@color/backgroundColor3"
         app:cardCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -222,6 +225,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
+        android:background="@color/backgroundColor3"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
         app:layout_constraintBottom_toTopOf="@+id/cardView3"
@@ -245,13 +249,13 @@
         android:layout_height="0dp"
         android:layout_marginStart="2dp"
         android:layout_marginEnd="2dp"
-        android:layout_marginBottom="?attr/actionBarSize"
+        android:layout_marginBottom="40dp"
+        android:background="@color/backgroundColor3"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
 
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -277,8 +281,8 @@
                 android:layout_weight="1"
                 android:gravity="end|center"
                 android:paddingEnd="10dp"
-                android:textColor="@color/red"
                 android:text="0.0"
+                android:textColor="@color/red"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
