--- a/app/src/main/res/layout/fragment_monthly.xml
+++ b/app/src/main/res/layout/fragment_monthly.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".View.Activity.Fragment.MonthlyFragment">
 
 
@@ -12,4 +13,6 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/history_trnsactions"
         />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
