--- a/app/src/main/res/layout/history_trnsactions.xml
+++ b/app/src/main/res/layout/history_trnsactions.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="5dp"
-    android:paddingBottom="10dp"
+    android:layout_marginBottom="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -101,6 +101,7 @@
         android:text="No Notes Available"
         android:textColor="@color/black"
         android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/ivCategoryImg"
         app:layout_constraintTop_toBottomOf="@+id/ivCategoryImg" />
 
