--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,20 +9,18 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
 
-<!--        status bar color-->
+        <!--        status bar color-->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
     </style>
 
     <style name="Theme.Expensify" parent="Base.Theme.Expensify" />
 
-    <style name="AppBottomSheetDialogTheme"
-        parent="Theme.Design.BottomSheetDialog">
+    <style name="AppBottomSheetDialogTheme" parent="Theme.Design.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/AppmodelStyle</item>
     </style>
 
-    <style name="AppmodelStyle"
-        parent="Widget.Design.BottomSheet.Modal">
+    <style name="AppmodelStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/dialoge_bg</item>
     </style>
 
